[package]
name = "my-vnc"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-vnc = { path = "libs/rust-vnc" }
win_desktop_duplication = { path = "libs/win_desktop_duplication" }
env_logger = "0.11.3"
log = "0.4.14"
chrono = "0.4.38"
anyhow = "1.0.86"
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32",
    "Win32_UI_Input_KeyboardAndMouse",
] }

clap = { version = "4.5.7", features = ["derive", "env"] }
lazy_static = "1.4.0"
xkeysym = "0.2.1"
win_key_codes = "0.1.2"
clipboard-win = "5.3.1"
bytesize = "1.3.0"
flate2 = "1.0.30"
byteorder = "1.5.0"
tungstenite = "0.23.0"



[profile.release]
lto = false
opt-level = 3