[package]
name = "my_vnc"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-vnc = { path = "libs/rust-vnc" }
win_desktop_duplication = { path = "libs/win_desktop_duplication" }
env_logger = "0.11.3"
log = "0.4.14"
chrono = "0.4.38"
anyhow = "1.0.86"
windows = { version = "0.58.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_HiDpi",
    "Win32",
    "Win32_UI_Input_KeyboardAndMouse",
] }

clap = { version = "4.5.7", features = ["derive", "env"] }
lazy_static = "1.4.0"
xkeysym = "0.2.1"
win_key_codes = "0.1.2"
clipboard-win = "5.3.1"
bytesize = "1.3.0"
flate2 = "1.0.30"
byteorder = "1.5.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3.30"
crc32fast = "1.4.2"
tokio-util = "0.7.11"

[profile.release]
lto = false
opt-level = 3

[[bin]]
name = "winvnc-tunnel"
path = "src/bin/winvnc-tunnel.rs"

[[bin]]
name = "winvnc-server"
path = "src/bin/winvnc-server.rs"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_vnc"
path = "src/my_vnc.rs"
